implemented new functionalities

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
 * handle add or delete exceptions
 * R komutu Time received sonunda nokta olacak mı?
+* D olmayanId ==> NullPointer
+* eliminate duplication
